finish 2024 day 15 part 1